--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "nedb-promises": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
