--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w & nodemon ./server/index.js"
+    "build": "webpack",
+    "server": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -23,12 +24,13 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "express": "^4.17.2",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.3.0"
   },
   "dependencies": {
-    "core-js": "^3.20.2",
-    "express": "^4.17.2"
+    "core-js": "^3.20.2"
   }
 }
