--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --open",
+    "dev": "webpack serve",
     "server": "node server.js"
   },
   "repository": {
@@ -28,8 +28,10 @@
     "gitignore": "^0.7.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.1",
     "sass": "^1.45.2",
     "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.3.0",
