--- a/babel.config.json
+++ b/babel.config.json
@@ -9,7 +9,5 @@
       }
     ]
   ],
-  "plugins": [
-    ["@babel/plugin-proposal-pipeline-operator", { "proposal": "minimal" }]
-  ]
+  "plugins": []
 }
