--- a/ethan.sglee/shoppingHow/package.json
+++ b/ethan.sglee/shoppingHow/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "core-js": "^3.20.2",
     "debug": "~2.6.9",
+    "ejs": "^3.1.6",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
