--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "core-js": "^3.20.2",
     "css-loader": "^6.5.1",
