--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve",
+    "dev": "nodemon server.js",
     "server": "node server.js"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server.js",
+      "server/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -29,6 +35,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
     "sass": "^1.45.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
