--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
     "esutils": "^2.0.3",
+    "express": "^4.17.2",
     "fill-range": "^7.0.1",
     "fs-readdir-recursive": "^1.1.0",
     "fs.realpath": "^1.0.0",
