--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "MIT",
   "sideEffects": [
-    "*.css"
+    "*.css",
+    "*.scss"
   ],
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -22,7 +23,7 @@
     "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
+    "css-loader": "^5.2.7",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -31,8 +32,8 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.2",
-    "sass": "^1.39.0",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.2.3",
     "url-loader": "^4.1.1",
