--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kakaopage-styles",
   "version": "1.0.0",
-  "description": "## 환경",
+  "description": "개발환경과 모듈라 프로그래밍",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack -w"
   },
   "keywords": [],
   "author": "jade.kjo",
@@ -31,8 +31,17 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "express": "^4.17.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.1",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
+    "scss-compile": "^0.1.7",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.3.0",
