--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,17 @@
     "sourceType": "module"
   },
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "single"],
-    "indent": ["error", 2]
+    "semi": [
+      "error",
+      "always"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "indent": [
+      "error",
+      2
+    ]
   }
 }
