--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/dwkim-97/fe-w23-shoppinghow#readme",
   "dependencies": {
     "core-js": "^3.20.2",
+    "cors": "^2.8.5",
     "express": "^4.17.2"
   },
   "devDependencies": {
