--- a/ethan.sglee/shoppingHow/package.json
+++ b/ethan.sglee/shoppingHow/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "sass": "node-sass -w -r public/stylesheets/sass/app.scss public/stylesheets/style.css"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,6 +22,7 @@
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^7.0.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
