--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "edward",
   "license": "ISC",
   "dependencies": {
+    "core-js": "3",
     "express": "^4.17.2"
   },
   "devDependencies": {
