--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js",
     "build": "webpack"
   },
   "keywords": [],
@@ -24,12 +26,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.17.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
     "prettier": "2.5.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.3.0",
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
