--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon ./server.js",
-    "dev": "webpack --config ./webpack/webpack.dev.js",
-    "prod": "webpack --config ./webpack/webpack.prod.js"
+    "dev": "webpack --config ./config/webpack.dev.js",
+    "prod": "webpack --config ./config/webpack.prod.js"
   },
   "keywords": [],
   "author": "carter",
@@ -20,15 +20,13 @@
     "css-loader": "^6.5.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "generator-express-es6": "^1.1.0",
     "html-webpack-plugin": "^5.5.0",
     "http-errors": "~1.6.3",
     "mini-css-extract-plugin": "^2.4.5",
     "morgan": "~1.9.1",
     "mustache": "^4.2.0",
     "sass": "^1.45.2",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1"
+    "sass-loader": "^12.4.0"
   },
   "devDependencies": {
     "webpack": "^5.65.0",
