--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
