--- a/ethan.sglee/shoppingHow/package.json
+++ b/ethan.sglee/shoppingHow/package.json
@@ -7,6 +7,7 @@
     "sass": "node-sass -w -r public/stylesheets/sass/app.scss public/stylesheets/style.css"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.20.2",
     "debug": "~2.6.9",
@@ -21,9 +22,15 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.1",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.3.0"
   }
 }
