--- a/ethan.sglee/shoppingHow/package.json
+++ b/ethan.sglee/shoppingHow/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "sass": "node-sass -w -r public/stylesheets/sass/app.scss public/stylesheets/style.css"
+    "sas": "sass -w public/stylesheets/sass:public/stylesheets/styles"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
