feat. 컴포넌트 & 컨테이너 기반 레이아웃 구현

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@core": ["./core"],
       "@components": ["./components"],
+      "@containers": ["./containers"],
       "@styles/*": ["./styles/*"],
       "@utils": ["./utils"]
     }
