--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "sas": "sass --watch src/sass:src/styles"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -30,7 +32,10 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
+    "mini-css-extract-plugin": "^2.4.5",
     "prettier": "2.5.1",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.3.0",
