--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "morgan": "~1.9.1",
     "mustache": "^4.2.0",
+    "mysql2": "^2.3.3",
     "sass": "^1.45.2",
     "sass-loader": "^12.4.0"
   },
