--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
+    "ignorePatterns": [
+        "output/**"
+    ],
     "rules": {
         "indent": [
             "error",
@@ -25,6 +28,27 @@
         "semi": [
             "error",
             "always"
+        ],
+        "space-before-function-paren": [
+            "error",
+            "never"
+        ],
+        "space-before-blocks": [
+            "error",
+            "never"
+        ],
+        "comma-spacing":"error",
+        "key-spacing": [
+            "error",
+            {
+                "afterColon": true
+            }
+        ],
+        "no-trailing-spaces": [
+            "error",
+            {
+                "skipBlankLines": true
+            }
         ]
     }
 }
