--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js -w index.js",
-    "webpack": "webpack -w"
+    "webpack": "webpack -w",
+    "eslint": "eslint .",
+    "eslint-fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
