--- a/.gitignore
+++ b/.gitignore
@@ -130,5 +130,5 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
-
+.DS_Store
 # End of https://www.toptal.com/developers/gitignore/api/node
