--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js -w index.js",
-    "webpack": "webpack -w"
+    "start": "node index.js",
+    "webpack": "webpack -w",
+    "eslint": "eslint .",
+    "eslint-fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -30,11 +32,13 @@
     "babel-loader": "^8.2.3",
     "core-js": "^3.20.2",
     "css-loader": "^6.5.1",
+    "eslint": "^8.6.0",
     "nodemon": "^2.0.15",
     "sass": "^1.45.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.3.0"
   }
 }
