--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "eslint": "^8.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.1",
     "prettier": "2.5.1",
-    "sass": "^1.45.2",
+    "sass": "^1.46.0",
     "sass-loader": "^12.4.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
