--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "concurrently": "^7.0.0",
     "core-js": "^3.20.2",
     "css-loader": "^6.5.1",
+    "eslint": "^8.6.0",
+    "eslint-config-google": "^0.14.0",
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
