--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js -w ./*.js",
     "webpack": "webpack -w",
     "eslint": "eslint .",
     "eslint-fix": "eslint --fix ."
