--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "client",
     "paths": {
       "@core": ["./core"],
       "@components": ["./components"],
