--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fe-w23-shoppinghow",
   "version": "1.0.0",
   "description": "clone shoppinghow wesite (feat. webpack)",
-  "main": "src/server.js",
+  "main": "server/app.js",
   "scripts": {
-    "dev": "concurrently \"webpack --config webpack.dev.js\" \"nodemon ./src/server.js\"",
+    "dev": "concurrently \"webpack --config webpack.dev.js\" \"nodemon ./server/app.js\"",
     "prettier": "prettier --write .",
     "build": "webpack --config webpack.prod.js",
     "serve": "node ./src/server.js",
