feat. Service API & API 호스트 IP env로 보호

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "client",
+    "baseUrl": "./client",
     "paths": {
       "@core": ["./core"],
       "@components": ["./components"],
       "@containers": ["./containers"],
+      "@services": ["./services"],
       "@styles/*": ["./styles/*"],
       "@utils": ["./utils"]
     }
