Implement Observable and Do etc
Implement Observable
Add ItemDataModel, ViewItemIdsModel and DibsItemIdsModel
Delete ItemDataManager
Update eslint settings
Update eslint settings and Do etc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,12 @@
             {
                 "skipBlankLines": true
             }
+        ],
+        "sort-imports": [
+            "error",
+            {
+                "ignoreCase": true
+            }
         ]
     }
 }
