--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
       "@components": ["./components"],
       "@containers": ["./containers"],
       "@services": ["./services"],
+      "@stores": ["./stores"],
       "@styles/*": ["./styles/*"],
       "@utils": ["./utils"]
     }
