--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
-    "core-js": "^3.17.2"
+    "core-js": "^3.17.2",
+    "rxjs": "^7.5.1"
   }
 }
