--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "corejs": "^1.0.0",
     "css-loader": "^6.5.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "regenerator-runtime": "^0.13.9",
