--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dev": "webpack --config ./config/webpack.config.dev.js",
+    "dev": "webpack serve --config ./config/webpack.config.dev.js",
+    "build:dev": "webpack --watch --config ./config/webpack.config.dev.js",
     "build:prod": "webpack --config ./config/webpack.config.prod.js"
   },
   "keywords": [],
@@ -24,7 +25,12 @@
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.46.0",
     "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
+  },
+  "dependencies": {
+    "core-js": "^3.20.2"
   }
 }
