--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "server": "node server.js",
+    "start": "node server.js",
+    "server": "webpack serve --open",
     "build": "webpack"
   },
   "keywords": [],
