[trey.lee] 3주차 미션 PR - 1 (#63)
* Create component directory

* Create ItemDataManager

* Fix ItemDataManager and Update related

* Remove obsolete fetchItemData.js

* Improve and Refactor components and etc

* Implement Recommend component

* Implement Observable and Do etc

Implement Observable
Add ItemDataModel, ViewItemIdsModel and DibsItemIdsModel
Delete ItemDataManager
Update eslint settings
Update eslint settings and Do etc

* Add ThemeItem component and Fix various issues

* Move Top10 into component directory

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 11,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "ignorePatterns": [
@@ -48,6 +48,12 @@
             "error",
             {
                 "skipBlankLines": true
+            }
+        ],
+        "sort-imports": [
+            "error",
+            {
+                "ignoreCase": true
             }
         ]
     }
