--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,5 +2,14 @@
   "name": "@root/api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon ./src/server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
+  },
+  "type": "module"
 }
